# cublas

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.hs  configure.ac  cublas.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
Foreign/CUDA/: BLAS.hs
Foreign/CUDA/BLAS/: Context.chs  Error.chs  Level1.chs  Level1.hs  Level2.chs  Level3.chs  Stream.chs  Types.chs
Foreign/CUDA/BLAS/Internal/: C2HS.hs  FFI.chs  Types.chs
cbits/: stubs.h
tools/: generate-ffi.hs
