name:                   cublas
version:                0.1.0.0
synopsis:               FFI bindings to the CUDA BLAS library
description:            FFI bindings to the NVIDIA CUDA Basic Linear Algebra library
license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:              Copyright (c) [2012..2013]. Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
category:               Foreign
cabal-version:          >=1.8

build-type:             Configure
Extra-tmp-files:        cublas.buildinfo config.status config.log
Extra-source-files:     configure
                        configure.ac
                        config.guess
                        config.sub
                        install-sh
                        cublas.buildinfo.in
                        cbits/stubs.h

library
  exposed-modules:      Foreign.CUDA.BLAS
                        Foreign.CUDA.BLAS.Level1
                        Foreign.CUDA.BLAS.Level2
                        Foreign.CUDA.BLAS.Context

  other-modules:        Foreign.CUDA.BLAS.Error
                        Foreign.CUDA.BLAS.Internal.C2HS

  build-depends:        base == 4.*,
                        cuda >= 0.4.1

  include-dirs:         .
  c-sources:

  build-tools:          c2hs >= 0.16
  ghc-options:          -Wall -O2 -funbox-strict-fields -fwarn-tabs

